# WindBnB

./: .gitignore  README.md  docker-compose.yml  memoria.md  package-lock.json
.github/workflows/: a2reservas-docker.yml
A2autenticacionREST/: Dockerfile  requirements.txt
A2clienteREST/: .dockerignore  .env.development  .gitignore  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
A2datosabiertosREST/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  openapi.json  pyproject.toml  requirements.txt  test_main.http
A2datosabiertosREST/models/: area.py  average_stay.py  gas_stations.py
A2datosabiertosREST/routes/: __init__.py  average_stay.py  gas_stations.py
A2datosabiertosREST/services/: __init__.py  average_stay.py  gas_stations.py  schedule.py
A2datosabiertosREST/src/: __init__.py
A2datosabiertosREST/src/models/: area.py  gas_stations.py  types.py
A2datosabiertosREST/src/routes/: __init__.py  average_stay.py  gas_stations.py
A2datosabiertosREST/src/services/: __init__.py  average_stay.py  error.py  gas_stations.py  schedule.py
A2datosabiertosREST/src/utils/: __init__.py
A2datosabiertosREST/utils/: __init__.py
A2reservasREST/: .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  fly.toml  openapi.json  requirements.in  requirements.txt
A2viviendasREST/: .dockerignore  README.md  config.env  fly.toml  openapi.json  requirements.txt
ifml/: Reserva.json  Valoracion.json  Vivienda.json  ifml.json
iweb/: houses.json  iweb.py
windgateway/: requirements.txt
(+113 files in other folders)
