[tool.poetry]
name = "a2datosabiertosrest"
version = "0.1.0"
description = ""
authors = ["carlos <carlomaco11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

